--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         張志遠
-<<<<<<< HEAD
                         <span class="text-primary">Zhiyuan Zhang</span>
                     </h1>
                     <div class="subheading mb-5">
@@ -49,16 +48,6 @@
                         <a href="jacky9304171980@gmail.com">jacky9304171980@gmail.com</a>
                     </div>
                     <p class="lead mb-5">我對於體育及拍照攝影相當感興趣，為來想做拍照攝影相關行業</p>
-=======
-                        <span class="text-primary">Zhang Zhiyuan</span>
-                    </h1>
-                    <div class="subheading mb-5">
-                        338 桃園市蘆竹區坑口里6鄰南山北路二段235巷3號
-                        <a href="jacky9304171980@gmail.com
-                        ">jacky9304171980@gmail.com</a>
-                    </div>
-                    <p class="lead mb-5">我對於體育及拍照攝影相當感興趣</p>
->>>>>>> 44cce4e7dcab2d19d77e88866a06d5994046d0c9
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -78,11 +67,31 @@
                             <div class="subheading mb-3">大團體組 五人組</div>
                             <p>108學年度大團體組冠軍 109學年度大團體組冠軍 110學年度大團體組冠軍 五人組季軍</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 20 - 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Web Developer</h3>
+                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Junior Web Designer</h3>
+                            <div class="subheading mb-3">Shout! Media Productions</div>
+                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                       
+                            <h3 class="mb-0">Web Design Intern</h3>
+                            <div class="subheading mb-3">Shout! Media Productions</div>
+                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
             </section>
@@ -90,15 +99,15 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">學歷</h2>
+                    <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">治平財團法人桃園市志平高級中等學校</h3>
-                            <div class="subheading mb-3">體育班</div>
-                            <div></div>
-                            <p>平均成績中等</p>
+                            <h3 class="mb-0">University of Colorado Boulder</h3>
+                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div>Computer Science - Web Development Track</div>
+                            <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">20219 - May 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
