--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h2 class="mb-5">經歷</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">高中全國啦啦隊景標賽</h3>
+                            <h3 class="mb-0">高中全國啦啦隊錦標賽</h3>
                             <div class="subheading mb-3">大團體組 五人組</div>
                             <p>108學年度大團體組冠軍 109學年度大團體組冠軍 110學年度大團體組冠軍 五人組季軍</p>
                         </div>
