--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Zhiyuan Zhang</span>
                     </h1>
                     <div class="subheading mb-5">
-                       338桃園市蘆竹區挳口里6鄰南山北路二段235巷3號 (TEL)+886 0916830062
+                       338桃園市蘆竹區坑口里6鄰南山北路二段235巷3號 (TEL)+886 0916830062
                         <a href="jacky9304171980@gmail.com">jacky9304171980@gmail.com</a>
                     </div>
                     <p class="lead mb-5">我對於體育及拍照攝影相當感興趣，為來想做拍照攝影相關行業</p>
