--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Zhiyuan Zhang</span>
                     </h1>
                     <div class="subheading mb-5">
-                       338桃園市蘆竹區坑口里6鄰南山北路二段235巷3號 (TEL)+886 0916830062
+                       338桃園市蘆竹區坑`口里6鄰南山北路二段235巷3號 (TEL)+886 0916830062
                         <a href="jacky9304171980@gmail.com">jacky9304171980@gmail.com</a>
                     </div>
                     <p class="lead mb-5">我對於體育及拍照攝影相當感興趣，為來想做拍照攝影相關行業</p>
@@ -63,9 +63,9 @@
                     <h2 class="mb-5">經歷</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">高中全國啦啦隊錦標賽</h3>
-                            <div class="subheading mb-3">大團體組 五人組</div>
-                            <p>108學年度大團體組冠軍 109學年度大團體組冠軍 110學年度大團體組冠軍 五人組季軍</p>
+                            <h3 class="mb-0">小餐館</h3>
+                            <div class="subheading mb-3">內場</div>
+                            <p>內場職務</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> 2020 - 2022</span></div>
                     </div>
