--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                     </div>
                     <p class="lead mb-5">我對於體育及拍照攝影相當感興趣，為來想做拍照攝影相關行業</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://instagram.com/_yuan.0417?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://youtube.com/@user-qg1wz4xf5i"><i class="fab fa-youtube"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/profile.php?id=100009124691348&mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
